--- a/package.json
+++ b/package.json
@@ -1,40 +1,47 @@
 {
-    "name"        : "just-proxy",
-    "description" : "simple just-dice proxy (alpha)",
-    "license"     : "Apache-2.0",
-    "homepage"    : "https://github.com/daxxog/just-proxy",
-    "main"        : "just-proxy.min.js",
-    "version"     : "0.0.1",
-    "engines": {
-        "node" : ">=0.10.33"
-    },
-    "maintainers": [{
-        "name"  : "David Volm",
-        "email" : "david@volminator.com",
-        "web"   : "http://daxxog.com/"
-    }],
-    "repository": {
-        "type" : "git",
-        "url"  : "https://github.com/daxxog/just-proxy.git"
-    },
-    "devDependencies": {
-        "bitfactory": "*",
-        "stoptime": "*",
-        "uglify-js": "*",
-        "vows": "*"
-    },
-    "scripts": {
-        "build": "node make.js",
-        "test": "vows test/*",
-        "start": "node cli.js",
-        "prepublish": "npm run build"
-    },
-    "files": [
-        "cli.min.js",
-        "just-proxy.min.js",
-        "bin/just-proxy"
-    ],
-    "bin": {
-        "just-proxy" : "bin/just-proxy"
+  "name": "just-proxy",
+  "description": "simple just-dice proxy (alpha)",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/daxxog/just-proxy",
+  "main": "just-proxy.min.js",
+  "version": "0.0.1",
+  "engines": {
+    "node": ">=0.10.33"
+  },
+  "maintainers": [
+    {
+      "name": "David Volm",
+      "email": "david@volminator.com",
+      "web": "http://daxxog.com/"
     }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/daxxog/just-proxy.git"
+  },
+  "devDependencies": {
+    "bitfactory": "*",
+    "stoptime": "*",
+    "uglify-js": "*",
+    "vows": "*"
+  },
+  "scripts": {
+    "build": "node make.js",
+    "test": "vows test/*",
+    "start": "node cli.js",
+    "prepublish": "npm run build"
+  },
+  "files": [
+    "cli.min.js",
+    "just-proxy.min.js",
+    "bin/just-proxy"
+  ],
+  "bin": {
+    "just-proxy": "bin/just-proxy"
+  },
+  "dependencies": {
+    "express": "^4.13.4",
+    "request": "^2.69.0",
+    "string": "^3.3.1"
+  }
 }
